Again, more margin to buttons to avoid overlap of scrollbar.

--- a/app/ux/css/screen.css
+++ b/app/ux/css/screen.css
@@ -46,7 +46,7 @@ body {
 #print.button,
 #edit.button {
   position: absolute;
-  margin: 1rem;
+  margin: 1.5rem;
   bottom: 0;
   box-shadow: 0 1px 2px rgba(34,36,38,.8);
 }
